Build out Card object

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 	<link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
 </head>
 <body>
-	<section id="game_div"></section>
+	<section id="game-div"></section>
 	<footer></footer>
 	<script type="text/javascript" src="flashcard_QA.js"></script>
 	<script type="text/javascript" src="./main.js"></script>
   <script type="text/javascript">
     (() => {
-      let myGame = new Game('#game_div', {
+      let myGame = new Game('#game-div', {
         game: 'flashcard',
         data: flashcard_QA
       });
