Bind shuffle button of the Deck to the Game

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 	<script type="text/javascript" src="./main.js"></script>
   <script type="text/javascript">
     (() => {
+      'use strict';
       let myGame = new Game('#game-div', {
         game: 'flashcard',
         data: flashcard_QA
       });
-      console.log('myGame ->', myGame);
     })();
   </script>
 </body>
