Added drag and drop capabilities to each card – project complete

--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Vanilla Javascript: Propagation and Binding</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="./css/deck.css">
-  <link rel="stylesheet" type="text/css" href="./css/animation.css">
-	<link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <title>Vanilla Javascript: Propagation and Binding</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./css/deck.css">
+    <link rel="stylesheet" type="text/css" href="./css/animation.css">
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
 </head>
 <body>
-	<section id="game-div"></section>
-	<footer></footer>
-	<script type="text/javascript" src="flashcard_QA.js"></script>
-	<script type="text/javascript" src="./main.js"></script>
-  <script type="text/javascript">
-    (() => {
-      'use strict';
-      let myGame = new Game('#game-div', {
-        game: 'flashcard',
-        data: flashcard_QA
-      });
-    })();
-  </script>
+<section id="game-div"></section>
+<footer></footer>
+<script type="text/javascript" src="flashcard_QA.js"></script>
+<script type="text/javascript" src="./main.js"></script>
+<script type="text/javascript">
+  (() => {
+    "use strict";
+    let myGame = new Game("#game-div", {
+      game: "flashcard",
+      data: flashcard_QA
+    });
+  })();
+</script>
 </body>
 </html>
